--- a/templates/home.html
+++ b/templates/home.html
@@ -1,7 +1,17 @@
 {% extends 'base.html' %}
-
+{% load static %}
 {% block title %}Loja Python{% endblock %}
 
 {% block content %}
-Olá!
+
+<head>
+    <link rel="stylesheet" href="../static/css/home.css">
+</head>
+
+<div class="home-container">
+    <div class="content">
+        <h2>Gerencie seu mercadinho de forma fácil!</h2>
+        <img src="../static/img/home-img.svg" alt="">
+    </div>
+</div>
 {% endblock %}
